--- a/riqsite/package.json
+++ b/riqsite/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://riqcodedit.github.io/prodriq-site",
+  "homepage": "https://www.prodbyriq.com",
   "name": "riqsite",
   "private": true,
   "version": "0.0.0",
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build"
+    "deploy": "gh-pages -d dist",
+    "deploy:custom": "./deploy.sh"
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
